--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mtis-backend": "file:"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
