--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mtis-backend": "file:"
+    "express": "^4.21.0",
+    "mtis-backend": "file:",
+    "pg": "^8.12.0"
   }
 }
