--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.2.0",
-    "mtis-backend": "file:"
+    "mtis-backend": "file:",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
