--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mtis-backend": "file:",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "zod": "3.23.8"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
