--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mtis-backend": "file:",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "zod": "3.23.8"
   },
