utilizar base de datos remota

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
 
-DB_NAME=
-DB_USER=postgres
-DB_PASSWORD=
-DB_HOST=localhost
-DB_PORT=5432
+DB_NAME=pg-tis-mtis
+DB_USER=avnadmin
+DB_PASSWORD="AVNS_OOuyfXT5VQjuM6WFYLY"
+DB_HOST=pg-mtis-mtis.i.aivencloud.com
+DB_PORT=16529
 
 SECRET_KEY=9c$@!w2Gb*3mXQpN2fTj&k9Xz7H!3v8L2uP!4sVjZx^5pTz9rG
