--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-
     "jsonwebtoken": "^9.0.2",
     "mtis-backend": "file:",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "zod": "3.23.8"
-
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
